<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.InsertExpensesActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_expenses"
        app:title="Adicionar Despesa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorRed"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/editPrice"
        app:layout_constraintStart_toStartOf="@+id/editPrice"
        app:layout_constraintTop_toBottomOf="@+id/editPrice" />

    <EditText
        android:id="@+id/editPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLength="14"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/price"
        android:inputType="none|number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/price_simbol"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_expenses" />

    <EditText
        android:id="@+id/editDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/date"
        android:inputType="date"
        android:selectAllOnFocus="false"
        app:layout_constraintEnd_toEndOf="@+id/editDescription"
        app:layout_constraintStart_toStartOf="@+id/editDescription"
        app:layout_constraintTop_toBottomOf="@+id/editDescription" />

    <Button
        android:id="@+id/btnCreatePayment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/button_rounded"
        android:backgroundTint="@color/colorRed"
        android:text="@string/add"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mySpinner" />

    <Spinner
        android:id="@+id/mySpinner"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:entries="@array/categories"
        android:prompt="@string/spinner_category"
        android:spinnerMode="dialog"
        app:layout_constraintEnd_toEndOf="@+id/editDate"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/editDate"
        app:layout_constraintTop_toBottomOf="@+id/editDate" />

    <ImageView
        android:id="@+id/price_simbol"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:tint="@color/colorGray50Op"
        app:layout_constraintBottom_toBottomOf="@+id/editPrice"
        app:layout_constraintEnd_toStartOf="@+id/editPrice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editPrice"
        app:layout_constraintVertical_bias="0.466"
        app:srcCompat="@drawable/money" />

    <ImageView
        android:id="@+id/document_simbol"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/editDescription"
        app:layout_constraintEnd_toStartOf="@+id/editDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editDescription"
        app:srcCompat="@drawable/description" />

    <ImageView
        android:id="@+id/date_simbol"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="@+id/editDate"
        app:layout_constraintEnd_toStartOf="@+id/editDate"
        app:layout_constraintStart_toStartOf="parent"
        android:tint="@color/colorGray50Op"
        app:layout_constraintTop_toTopOf="@+id/editDate"
        app:srcCompat="@drawable/date" />

    <ImageView
        android:id="@+id/category_simbol"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="4dp"
        android:tint="@color/colorGray50Op"
        app:layout_constraintBottom_toBottomOf="@+id/mySpinner"
        app:layout_constraintEnd_toStartOf="@+id/mySpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/mySpinner"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/category" />

    <ImageButton
        android:id="@+id/btnAddPhoto"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:adjustViewBounds="true"
        android:background="@drawable/button_rounded"
        android:backgroundTint="@color/colorGray50Op"
        android:contentDescription="@string/insira_uma_imagem"
        android:src="@drawable/add_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnCreatePayment"
        app:layout_constraintStart_toStartOf="@+id/btnCreatePayment"
        app:layout_constraintTop_toBottomOf="@+id/btnCreatePayment" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView_attach"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="5dp"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="@+id/btnCreatePayment"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btnCreatePayment"
        app:layout_constraintTop_toBottomOf="@+id/btnCreatePayment"
        tools:srcCompat="@tools:sample/backgrounds/scenic[5]" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/delete_image"
        android:visibility="gone"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:src="@drawable/close"
        app:layout_constraintEnd_toEndOf="@+id/imageView_attach"
        app:layout_constraintTop_toTopOf="@+id/imageView_attach" />

    <TextView
        android:id="@+id/txtAddDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/insira_imagem"
        app:layout_constraintEnd_toEndOf="@+id/btnAddPhoto"
        app:layout_constraintStart_toStartOf="@+id/btnAddPhoto"
        app:layout_constraintTop_toBottomOf="@+id/btnAddPhoto" />


</androidx.constraintlayout.widget.ConstraintLayout>